--- a/Visualize.ipynb
+++ b/Visualize.ipynb
@@ -6,26 +6,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipynb.fs.full.plotfunc import draw, create_widgets\n",
+    "# from ipynb.fs.full.plotfunc import draw, create_widgets\n",
     "\n",
-    "# from plotfunc import draw, create_widgets"
+    "from plotfunc import draw, create_widgets\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/usr/bin/sh: pipreqs: command not found\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "!pipreqs\n"
+    "Set the following parameter values to visualize the model. If you want to print the output, check the box and see the folder \"test\"."
    ]
   },
   {
