--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Wait for Binder to build the repository. It will automatically launch JupyterLab
 When JupyterLab is launched, click HELP in the main menu and select "Launch Classic Notebook"
 You should now be able to view a list of files. 
 Open 'Visualize.ipynb' and run it. 
+[![Binder](https://mybinder.org/badge_logo.svg)](https://gesis.mybinder.org/binder/v2/gh/ketikagarg/collective_foraging/bddbc1800974e59566bea2b126fad480e760add2?filepath=Visualize.ipynb
+)
